objects/WorkRamp_Assignment_Log__c.object
<CustomObject>
    <description>Log of all errors and other relevant information that descends from DML operations on the WorkRamp Assignment custom object</description>
    <label>WorkRamp Assignment Log</label>
    <nameField>
        <label>WorkRamp Assignment Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WorkRamp Assignment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Message__c</fullName>
        <description>Log message</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <description>Log level. Either Info, Warn, or Error</description>
        <inlineHelpText>Log level. Either Info, Warn, or Error</inlineHelpText>
        <label>Log Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                    <default>true</default>
                    <label>Info</label>
                </value>
                <value>
                    <fullName>Warn</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <description>Apex Class from which the log was generated</description>
        <inlineHelpText>Apex Class from which the log was generated</inlineHelpText>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkRamp_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If applicable, ID of the WorkRamp Assignment record that this log is related to</description>
        <inlineHelpText>If applicable, ID of the WorkRamp Assignment record that this log is related to</inlineHelpText>
        <label>WorkRamp Assignment</label>
        <referenceTo>WorkRamp_Assignment__c</referenceTo>
        <relationshipLabel>WorkRamp Assignment Logs</relationshipLabel>
        <relationshipName>WorkRamp_Assignment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>